--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,7 @@
             "comments": false,
             "strings": true,
         },
-        "editor.autoIndent": true,
+        "editor.autoIndent": "full",
     },
     "yaml.format.bracketSpacing": true,
     "yaml.format.enable": true,
